# rules_elm

./: .bazelignore  .gitignore  CHANGELOG.md  README.md  WORKSPACE
.github/workflows/: examples.yaml
elm/: BUILD.bazel  def.bzl  elm_wrapper.bzl  repositories.bzl  toolchain.bzl
elm/private/: BUILD.bazel  elm_dependencies.py.tpl  elm_test_wrapper.py.tpl  elm_wrapper.bzl  elm_wrapper.py.tpl  test.bzl
examples/build-project/: BUILD.bazel  README.md  elm.json
examples/build-project/src/: Main.elm
examples/build-project/tests/: Tests.elm
examples/display-version/: BUILD.bazel  version.bzl
script/: fetch-elm-checksum.bash  fetch-elm-test-checksum.bash
