load("@rules_elm//elm:def.bzl", "elm_make", "elm_dependencies", "elm_test")

elm_dependencies(
    name = "deps",
    elm_json = "elm.json",
)

elm_make(
    name = "index",
    srcs = glob(["**"]),
    elm_json = "elm.json",
    main = "src/Main.elm",
    output = "index.html",
    elm_home = ":deps",
)

elm_make(
    name = "index-optimize",
    srcs = glob(["**"]),
    elm_json = "elm.json",
    main = "src/Main.elm",
    output = "index.html",
    optimize = True,
    elm_home = ":deps",
)

elm_make(
    name = "index-without-deps",
    srcs = glob(["**"]),
    elm_json = "elm.json",
    main = "src/Main.elm",
    output = "index.html",
)

elm_test(
    name = "sample-test",
    tests = glob(["tests/**"]),
    srcs = glob(["src/**"]),
    elm_json = "elm.json",
    elm_home = ":deps",
)
